Fixed 100vh on iOS safari error

--- a/components/shared/layout.less
+++ b/components/shared/layout.less
@@ -1,7 +1,11 @@
 .layout {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 
   > main {
     flex: 1;
